--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="NexaCRM - The CRM built for growing teams. Manage clients, track sales, and scale operations seamlessly." />
+    <meta name="description" content="KabaHub - The CRM built for growing teams. Manage clients, track sales, and scale operations seamlessly." />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
-    <title>NexaCRM - The CRM Built for Growing Teams</title>
+    <title>KabaHub - The CRM Built for Growing Teams</title>
   </head>
   <body>
     <div id="root"></div>
